Finished implementation of SMS channel with smart web sms

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 NEXMO_KEY=
 NEXMO_SECRET=
 NEXMO_FROM=
+
+SMS_TOKEN=null
+SMS_SENDER_ID=null
+SMS_ROUTING=3
+SMS_TYPE=0
